src/test/resources/purescript_examples/failing/Superclasses3.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith UndefinedTypeVariable\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSProperNameImpl(ModuleName)
        PSProperNameImpl(Qualified)
          PsiElement(proper name)('UnknownSuperclassTypeVar')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSProperNameImpl(ImportModuleName)
          PSProperNameImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeClassDeclarationImpl(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Foo')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)('\n\n')
        PSImpliesImpl(Implies)
          <empty list>
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeClassDeclarationImpl(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSIdentifierImpl(TypeConstructor)
          PSProperNameImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Foo')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSIdentifierImpl(GenericIdentifier)
            PsiElement(identifier)('b')
        PsiElement())(')')
        PsiElement(whitespace)(' ')
        PSImpliesImpl(Implies)
          PsiElement(<=)('<=')
          PsiElement(whitespace)(' ')
        PSProperNameImpl(ClassName)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('Bar')
            PsiElement(whitespace)(' ')
        PSIdentifierImpl(GenericIdentifier)
          PsiElement(identifier)('a')
          PsiElement(whitespace)('\n')
